# HeartMatch

./: README.md
backend/: .gitignore  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 646c0e9d3cc4_add_column_is_active.py
backend/src/: config.py  loader.py  main.py
backend/src/bot/handlers/: __init__.py  edit_profile.py  register.py  search.py
backend/src/bot/handlers/states/: EditProfile.py  MessageStates.py  RegistrationStates.py  SearchStates.py
backend/src/bot/keyboards/: edit_profile.py  find.py  register_kb.py  search_kb.py  start.py
backend/src/bot/utils/: AlbumMiddleware.py
backend/src/database/: Crud.py  database.py  models.py  seed.py
backend/src/database/cruds/: UserCRUD.py
backend/src/server/api/: api.py
backend/src/utils/: Observer.py  utils.py
backend/tests/: test.py
front/: package-lock.json  package.json  vite.config.ts
front/src/: App.vue
front/src/api/: axios.ts  users.ts
front/src/components/: FooterNav.vue  avatar.vue  card.vue
front/src/models/: user.ts
front/src/router/: index.ts
front/src/svg/: dislike.vue  heart.vue  history.vue  location.vue  profile.vue  search.vue  statistics.vue
front/src/views/: Auth.vue  HistoryPage.vue  ProfilePage.vue  Statistics.vue  test.vue
